--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <title>Web Mouse Brain Visualization</title>
-  </head>
-  <body>
-    <div id="stage"></div>
-    <script src="/static/three.min.js"></script>
-    <script src="/static/OrbitControls.js"></script>
-  </body>
-</html>
+{% extends "base.html" %}
+
+{% block webglscript %}
+
+
+
+
+
+
+
+{% endblock %}
