--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,9 @@
     <div id="stage"></div>
     <script src="/static/three.min.js"></script>
     <script src="/static/OrbitControls.js"></script>
+    <script src="/static/helvetiker_bold.typeface.js"></script>
+    <!-- <script src="js/geometries/TextGeometry.js"></script> -->
+    <!-- <script src="js/utils/FontUtils.js"></script> -->
     <script>
       {% block webglscript %}{% endblock %}
     </script>
