--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,8 @@
     <div id="stage"></div>
     <script src="/static/three.min.js"></script>
     <script src="/static/OrbitControls.js"></script>
-    <script src="/static/helvetiker_bold.typeface.js"></script>
-    <!-- <script src="js/geometries/TextGeometry.js"></script> -->
-    <!-- <script src="js/utils/FontUtils.js"></script> -->
+    <script src="/static/Detector.js"></script>
+    <script src="/static/stats.min.js"></script>
     <script>
       {% block webglscript %}{% endblock %}
     </script>
