Add minimum api

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,12 @@
   </head>
   <body>
     <div id="stage"></div>
-    <script src="/static/three.min.js"></script>
-    <script src="/static/OrbitControls.js"></script>
-    <script src="/static/Detector.js"></script>
-    <script src="/static/stats.min.js"></script>
+    <script type="text/javascript" src="/static/three.min.js"></script>
+    <script type="text/javascript" src="/static/OrbitControls.js"></script>
+    <script type="text/javascript" src="/static/Detector.js"></script>
+    <script type="text/javascript" src="/static/stats.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
     <script>
       {% block webglscript %}{% endblock %}
     </script>
