--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@ THREE.Cache.enabled = true;
 var container, stats, controls, hex, color;
 var camera, cameraTarget, scene, renderer;
 var group, textMesh, textGeo, material;
-var scale = 3;
+var scale = 2.5;
 
 var sphereMaterials = {};
 var lineMaterials = {};
@@ -20,7 +20,7 @@ var firstLetter = true;
 
 var text,
 height = 1,
-size = 20,
+size = 30,
 hover = 20,
 curveSegments = 4,
 bevelThickness = 2,
@@ -43,7 +43,7 @@ function init() {
   // CAMERA
 
   camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 10000 );
-  camera.position.set( 6000, 2850, 3950 );
+  camera.position.set( 7150, 2800, 4700 );
 
   cameraTarget = new THREE.Vector3( 2500, 1500, 2050 );
   camera.lookAt( cameraTarget );
@@ -118,7 +118,7 @@ function createText() {
     smaterial = new THREE.MeshLambertMaterial({ color: 0x330000 });
 
     //sphere geometry
-    radius = (Math.sqrt({{ cell["voxel"] }} / Math.PI));
+    radius = (Math.sqrt({{ cell["voxel"] }} / Math.PI)) * 2.5;
     sphereGeo = new THREE.SphereGeometry(radius);
 
     //text geometry
@@ -163,7 +163,7 @@ function createText() {
 
   {% for link in links %}
     //line material
-    lmaterial = new THREE.LineBasicMaterial({ color: 0x003300, opacity: 0.1, transparent: true});
+    lmaterial = new THREE.LineBasicMaterial({ color: 0x003300, opacity: 0.15, transparent: true, linewidth: {{ link["weight"] }}*10 });
 
     //line geometry
     lineGeo = new THREE.Geometry();
@@ -203,7 +203,7 @@ function render() {
 
 //--------------- ATTENUATION ---------------
 function attenuate(){
-  attenuation_rate = -0.02;
+  attenuation_rate = -0.05;
   for (var key in sphereMaterials){
     if (sphereMaterials[key].color.getHSL()["l"] > 0.12) {
       sphereMaterials[key].color.offsetHSL(0, 0, attenuation_rate);
@@ -219,7 +219,7 @@ function attenuate(){
 }
 
 function startAttenuation(){
-  interval = 200;
+  interval = 100;
   setInterval("attenuate()", interval);
 }
 
