--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,24 @@
 {% extends "base.html" %}
 
-{% block webglscript %}
+{% block extracss %}
+<style></style>
+{% endblock %}
+
+
+{% block extrascript %}
+<script src="/static/three.min.js"></script>
+<script src="/static/OrbitControls.js"></script>
+<script src="/static/Detector.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+<script>
 
 //--------------- WEBGL ---------------
 
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 
 THREE.Cache.enabled = true;
-var container, stats, controls, hex, color;
+var container, controls, color;
 var camera, cameraTarget, scene, renderer;
 var group, textMesh, textGeo, material;
 var scale = 2.5;
@@ -43,9 +54,9 @@ function init() {
   // CAMERA
 
   camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 10000 );
-  camera.position.set( 7150, 2800, 4700 );
+  camera.position.set( 4000, 400, 1500 );
 
-  cameraTarget = new THREE.Vector3( 2500, 1500, 2050 );
+  cameraTarget = new THREE.Vector3( 0, 0, 0 );
   camera.lookAt( cameraTarget );
 
   // SCENE
@@ -83,13 +94,6 @@ function init() {
 
   controls = new THREE.OrbitControls(camera, renderer.domElement);
   controls.maxDistance = 10000;
-
-  // STATS
-
-  stats = new Stats();
-  stats.domElement.style.position = 'absolute';
-  stats.domElement.style.top = '0px';
-  //container.appendChild( stats.domElement );
 
   window.addEventListener( 'resize', onWindowResize, false );
 }
@@ -189,7 +193,6 @@ function createText() {
 function animate() {
   requestAnimationFrame( animate );
   render();
-  stats.update();
   controls.update();
 
 }
@@ -243,5 +246,7 @@ socket.on('activation', function(data){
     }
   }
 });
+
+</script> 
 
 {% endblock %}
