--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Web Mouse Brain Visualization</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     {% block extracss %}{% endblock %}
   </head>
   <body>
+    {% block main %}{% endblock %}
     {% block extrascript %}{% endblock %}
   </body>
 </html>
