--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,41 @@
 {% extends "base.html" %}
 
+
 {% block extracss %}
-<style></style>
+<style>
+.wrapper{
+  position: relative;
+}
+#viewArea{
+}
+.toolBox{
+  width: 300px;
+  height: 120px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  text-align: center;
+}
+#searchbox{
+  background-color: rgba(100, 100, 100, 0.5);
+  border: None;
+}
+</style>
+{% endblock %}
+
+
+{% block main %}
+<div class="wrapper">
+  <div id="viewArea"></div>
+  <div class="toolBox">
+    <form class="well form-search" id="searchbox">
+      <input type="text" class="input-medium search-query">
+      <button type="submit" class="btn" style="background-color: rgba(50, 50, 50, 0.8); color: rgba(200, 200, 200, 0.8);">	
+	<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+      </button>
+    </form>
+  </div>
+</div>
 {% endblock %}
 
 
@@ -48,9 +82,6 @@ animate();
 startAttenuation();
 
 function init() {
-  container = document.createElement( 'div' );
-  document.body.appendChild( container );
-
   // CAMERA
 
   camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 1, 10000 );
@@ -88,7 +119,7 @@ function init() {
   renderer.setClearColor( scene.fog.color );
   renderer.setPixelRatio( window.devicePixelRatio );
   renderer.setSize( window.innerWidth, window.innerHeight );
-  container.appendChild( renderer.domElement );
+  document.getElementById("viewArea").appendChild( renderer.domElement );
 
   // ORBITCONTROLS
 
