--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,12 @@
 
 
 {% block extracss %}
+
 <style>
 .wrapper{
   position: relative;
 }
+
 #viewArea{
 }
 .toolBox{
@@ -16,11 +18,18 @@
   right: 10px;
   text-align: center;
 }
+
 #searchbox{
   background-color: rgba(100, 100, 100, 0.5);
   border: None;
 }
+
+#searchbutton{
+  background-color: rgba(50, 50, 50, 0.8);
+  color: rgba(200, 200, 200, 0.8);
+}
 </style>
+
 {% endblock %}
 
 
@@ -29,8 +38,8 @@
   <div id="viewArea"></div>
   <div class="toolBox">
     <form class="well form-search" id="searchbox">
-      <input type="text" class="input-medium search-query">
-      <button type="submit" class="btn" style="background-color: rgba(50, 50, 50, 0.8); color: rgba(200, 200, 200, 0.8);">	
+      <input type="text" class="input-medium search-query" name="query" value="" placeholder="Let's explore!">
+      <button class="btn" id="searchbutton" name="button" value="click" onClick="jump(this.form);return false;">
 	<span class="glyphicon glyphicon-search" aria-hidden="true"></span>
       </button>
     </form>
@@ -45,6 +54,7 @@
 <script src="/static/Detector.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+
 <script>
 
 //--------------- WEBGL ---------------
@@ -236,6 +246,11 @@ function render() {
   renderer.render( scene, camera );
 }
 
+//--------------- SEARCH ---------------
+function jump(form){
+  var query = form.query.value;
+  console.log(query);
+}
 
 //--------------- ATTENUATION ---------------
 function attenuate(){
